syntax = "proto3";
package clientchannel;

message IntroduceGdprOnEventFieldRequest {
	string tenant = 1;
	string topic = 2;
	string event_id = 3;
	string field_name = 4;
	string default_value = 5;
}

message IntroduceGdprOnEventFieldResponse {}
